[package]
name = "openfga_checker"
version = "0.2.0"
edition = "2021"
description = "OpenFGA model checker, contains code to check the validity of a model"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openfga_common = { path = "../openfga_common", version = "0.2.0" }
thiserror = "1.0.37"
