[package]
name = "openfga_compiler"
version = "0.1.0"
edition = "2021"
description = "OpenFGA model compiler, contains cli interface"
license = "Apache-2.0"
default-run = "openfgac"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.1.5"
chumsky = "0.8.0"
openfga_common = { path = "../openfga_common", version = "0.1.0" }
openfga_dsl_parser = { path = "../openfga_dsl_parser", version = "0.1.0" }
openfga_checker = { path = "../openfga_checker", version = "0.1.0" }
serde_json = "1.0.86"

[[bin]]
name = "openfgac"
path = "src/main.rs"

[[bin]]
name = "openfgac-json"
path = "src/json/main.rs"